@@ -4,14 +4,16 @@ Hash: SHA1
 AUX mcollectived.initd 611 RMD160 8c37234210005e1ad2705360f9b04e870b629011 SHA1 43337c8f059d8c77ca5323e9f09664d1b271b708 SHA256 ca676b85fe2e4a1e4acc64a8f06e67b12ea68982f17cf08f757d68dd633d0220
 DIST mcollective-0.4.5.tgz 167147 RMD160 ab0a96d4cb2d3adba8f18f09a6b5785ec2740efb SHA1 85bef77b04bdf535471495a3172a772e1f624892 SHA256 994c86cb555182f1183e001ff4dc5ce7bbf6457d077459d6c5fab0956ef774da
 DIST mcollective-0.4.6.tgz 182135 RMD160 d4f3914b4783a64d606a02f6ddf9c50a8313b359 SHA1 9062a32068d5ff1ca41d9f0aa9622995a5151359 SHA256 8664ccbe1b7f9319563ac02809ac4b2169c03ae1300aa492932614352160cfaa
+DIST mcollective-0.4.7.tgz 194715 RMD160 523e693beb2f35222f7f89394626cd78bb057278 SHA1 b09ccb5bd390f28c19fe62331e0623f73e1f0ddd SHA256 6892c0bf7b8b42d90108c79f5b9a39babaa1f61dfb7baede462f3b8e7e2dd9c5
 EBUILD mcollective-0.4.5.ebuild 1445 RMD160 8b9729195df11a5743c35ae59033061342ffa1a6 SHA1 744949a4d7fdfb0d9bb2b2573fc85c0c2dcc7276 SHA256 cbdf12fc54cc7457d25ddf1ab94630653067a289a0c1391d26a6db95fe8e9d39
 EBUILD mcollective-0.4.6.ebuild 1462 RMD160 0efb0441323449db6113b87f49b3d21c412f0316 SHA1 85e06fc4b46f8cdf9916b6862773189b7616880c SHA256 55b0874e1324405ed9523e698a36e72f51b0c34a3d2ae226e3b8a36223fa95f4
-MISC ChangeLog 1453 RMD160 8dd27434e233f6ed9b29a7a0c53031504c1a466e SHA1 1e51710dda0f7d0a751f40c3ba1d8a91e1e9fd84 SHA256 b2ed8cbbbbd2aebbba099846409d71423280ad54d9d1a03ceffa5b3549a23b5d
+EBUILD mcollective-0.4.7.ebuild 1462 RMD160 0efb0441323449db6113b87f49b3d21c412f0316 SHA1 85e06fc4b46f8cdf9916b6862773189b7616880c SHA256 55b0874e1324405ed9523e698a36e72f51b0c34a3d2ae226e3b8a36223fa95f4
+MISC ChangeLog 1585 RMD160 e9c689d0ff3495b0e00a7069b511c8ca8f9677ed SHA1 f773fc1f9c0e916bdcd93792ac8f031779c721c6 SHA256 4f4dc686cc9d70dd6c472e51ceaaf4232574c9a3b52a2d4da422967db0c78666
 MISC metadata.xml 463 RMD160 a93c627ae1a9f8b759ced1af615f7c147f49aa43 SHA1 3bc03dd891a3ceb567aace896b9cfe64771cbf8b SHA256 ea5db5c13ed2012181b5dfbb2170a24bc67c9b6f7b2d6de8b934a27ee4a7f1b1
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iD8DBQFMGDyeQW+hXSf0t0IRAjiWAKDIjtni1w844DF6zBOzaCK+n7jzXgCg3oEv
-AXrrCigttmLgH0Cn5E3t698=
-=CePp
+iD8DBQFMKt0KQW+hXSf0t0IRAnWhAKDKoEbaYQzD9wQGiN7aZrWVFJCA3ACfam3Y
+rAoInl/RGWciM2k3hb0hNC8=
+=btm2
 -----END PGP SIGNATURE-----
