@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*mcollective-0.4.7 (30 Jun 2010)
+
+  30 Jun 2010; Lance Albertson <ramereth@gentoo.org>
+  +mcollective-0.4.7.ebuild:
+  Version bump
+
   16 Jun 2010; Lance Albertson <ramereth@gentoo.org>
   mcollective-0.4.6.ebuild:
   Optionally install client binaries but enabled by default
